samples/_failures_safe/1761610398_eebda3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_049f7093.c: In function ‘main’:
./samples/SAFE/__tmp_049f7093.c:151:22: error: ‘decomp’ undeclared (first use in this function)
  151 |         buffer_free(&decomp
      |                      ^~~~~~
./samples/SAFE/__tmp_049f7093.c:151:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_049f7093.c:151:28: error: expected ‘)’ at end of input
  151 |         buffer_free(&decomp
      |                    ~       ^
      |                            )
./samples/SAFE/__tmp_049f7093.c:151:9: error: expected declaration or statement at end of input
  151 |         buffer_free(&decomp
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_049f7093.c:151:9: error: expected declaration or statement at end of input
